--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,9 +11,8 @@
     <ImageView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:foregroundGravity="top"
-            android:text=""
             android:id="@+id/picture_container"
+            android:gravity = "top"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -26,7 +25,7 @@
             android:text=""
             android:gravity="bottom"
 
-            android:textSize="25sp"
+            android:textSize="15sp"
             android:textColor="@color/colorAccent"
             android:id="@+id/picture_container_text"
             app:layout_constraintBottom_toBottomOf="@id/picture_container"
