--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,51 +3,69 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_gravity="top"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/colorBackground"
         tools:context=".MainActivity">
 
+
     <ImageView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/picture_container"
-            android:gravity = "top"
+            android:layout_marginTop="10sp"
+            android:background="@color/colorBackground"
+            android:foregroundGravity="top"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+           />
     <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginTop="40pt"
+            android:layout_width="400sp"
+            android:layout_height="100sp"
+            android:layout_marginTop="5sp"
             android:layout_marginBottom="5sp"
+            android:layout_marginLeft="5sp"
+            android:layout_marginRight="5sp"
             android:text=""
-            android:gravity="bottom"
-
+            app:fontFamily="@font/walkway"
+            android:textAlignment="center"
+            android:gravity="center_horizontal"
             android:textSize="15sp"
-            android:textColor="@color/colorAccent"
+            android:textColor="@color/colorPrimaryDark"
             android:id="@+id/picture_container_text"
-            app:layout_constraintBottom_toBottomOf="@id/picture_container"
+            android:background="@color/colorSecondary"
+            app:layout_constraintTop_toTopOf="parent"
+
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             />
+
+
+
     <Button
 
             android:text="@string/select_a_cat_text"
-            android:layout_width="90pt"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/walkway"
-
+            android:textColor="@color/colorPrimary"
+            android:textSize="20sp"
+            android:layout_width="220sp"
+            android:layout_height="50sp"
+            app:fontFamily="@font/walkway"
+            android:gravity="center"
             android:id="@+id/button_take_a_picture"
             android:background="@color/colorAccent"
             app:layout_constraintBottom_toBottomOf="@id/picture_container"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginBottom="10pt"
-            android:layout_marginRight="10pt"
-            android:layout_marginLeft="10pt"
+            android:layout_marginTop="7sp"
+            android:layout_marginBottom="10sp"
+            android:layout_marginRight="10sp"
+            android:layout_marginLeft="10sp"
             tools:layout_editor_absoluteY="610dp"
             tools:layout_editor_absoluteX="0dp"/>
+
+
 
 </android.support.constraint.ConstraintLayout>
