--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#0B0A0E</color>
     <color name="colorAccent">#B6E2B9</color>
     <color name="colorBackground">#010F0B</color>
+    <color name="colorSecondary">#F6D7FB</color>
 </resources>
