tensorflow removed. working on wording and producing content after this

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,16 +24,16 @@
            />
     <TextView
             android:layout_width="400sp"
-            android:layout_height="100sp"
+            android:layout_height="125sp"
             android:layout_marginTop="5sp"
             android:layout_marginBottom="5sp"
             android:layout_marginLeft="5sp"
             android:layout_marginRight="5sp"
             android:text=""
-            app:fontFamily="@font/walkway"
+            app:fontFamily="@font/proxima"
             android:textAlignment="center"
             android:gravity="center_horizontal"
-            android:textSize="15sp"
+            android:textSize="20sp"
             android:textColor="@color/colorPrimaryDark"
             android:id="@+id/picture_container_text"
             android:background="@color/colorSecondary"
@@ -52,7 +52,7 @@
             android:textSize="20sp"
             android:layout_width="220sp"
             android:layout_height="50sp"
-            app:fontFamily="@font/walkway"
+            app:fontFamily="@font/proxima"
             android:gravity="center"
             android:id="@+id/button_take_a_picture"
             android:background="@color/colorAccent"
