--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#010F0B</color>
     <color name="colorPrimaryDark">#0B0A0E</color>
-    <color name="colorAccent">#B6E2B9</color>
-    <color name="colorBackground">#010F0B</color>
+    <color name="colorAccent">#EDC497</color>
+    <color name="colorBackground">#252415</color>
     <color name="colorSecondary">#F6D7FB</color>
 </resources>
