added content, updated some build tools, readying for release

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,6 @@
     <color name="colorPrimary">#010F0B</color>
     <color name="colorPrimaryDark">#0B0A0E</color>
     <color name="colorAccent">#EDC497</color>
-    <color name="colorBackground">#252415</color>
+    <color name="colorBackground">#2B2A24</color>
     <color name="colorSecondary">#F6D7FB</color>
 </resources>
