added some stuff to capture the result picture and text to phone local storage

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,8 @@
            />
 
     <TextView
-            android:layout_width="400sp"
+            android:id="@+id/picture_container_text"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5sp"
             android:layout_marginBottom="5sp"
@@ -33,30 +34,54 @@
             app:fontFamily="@font/proxima"
             android:textAlignment="center"
             android:gravity="center_horizontal"
-            android:textSize="22sp"
+            android:textSize="18sp"
             android:textColor="@color/colorPrimaryDark"
-            android:id="@+id/picture_container_text"
-            android:background="@color/colorSecondary"
+            android:visibility="invisible"
+            android:background="@drawable/rounded_corners_picture_container_text"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             />
 
     <Button
+            android:id="@+id/button_take_a_picture"
             android:text="@string/select_a_cat_text"
             android:textColor="@color/colorPrimary"
-            android:textSize="20sp"
-            android:layout_width="220sp"
-            android:layout_height="50sp"
+            android:textSize="18sp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             app:fontFamily="@font/proxima"
             android:gravity="center"
-            android:id="@+id/button_take_a_picture"
-            android:background="@color/colorAccent"
+            android:background="@drawable/rounded_corners_button_take_a_picture"
             app:layout_constraintBottom_toBottomOf="@id/picture_container"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginTop="-5sp"
+            android:layout_marginBottom="20sp"
+            android:layout_marginRight="10sp"
+            android:layout_marginLeft="10sp"
+            tools:layout_editor_absoluteY="610dp"
+            tools:layout_editor_absoluteX="0dp"/>
+
+    <Button
+            android:id="@+id/button_save_result"
+            android:visibility="invisible"
+            android:text="@string/capture_result_text"
+            android:textColor="@color/colorPrimary"
+            android:textSize="18sp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:fontFamily="@font/proxima"
+            android:gravity="center"
+
+            android:background="@drawable/rounded_corners_button_take_a_picture"
+            app:layout_constraintBottom_toBottomOf="@id/picture_container"
+            app:layout_constraintTop_toBottomOf="@id/button_take_a_picture"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:paddingTop="5sp"
             android:layout_marginTop="7sp"
-            android:layout_marginBottom="10sp"
+            android:layout_marginBottom="2sp"
             android:layout_marginRight="10sp"
             android:layout_marginLeft="10sp"
             tools:layout_editor_absoluteY="610dp"
