--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,67 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_gravity="top"
+        android:layout_gravity="center_horizontal"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/colorBackground"
+        android:orientation="vertical"
+
         tools:context=".MainActivity">
 
-    <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/picture_container"
-            android:layout_marginTop="80sp"
-            android:background="@color/colorBackground"
-            android:foregroundGravity="top"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-           />
-
-    <TextView
-            android:id="@+id/picture_container_text"
+    <RelativeLayout
+            android:id="@+id/screenshot"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5sp"
-            android:layout_marginBottom="5sp"
-            android:layout_marginLeft="5sp"
-            android:layout_marginRight="5sp"
-            android:text=""
-            app:fontFamily="@font/proxima"
-            android:textAlignment="center"
-            android:gravity="center_horizontal"
-            android:textSize="18sp"
-            android:textColor="@color/colorPrimaryDark"
-            android:visibility="invisible"
-            android:background="@drawable/rounded_corners_picture_container_text"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            />
+
+            android:orientation="vertical"
+            >
+
+        <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:id="@+id/picture_container"
+                android:background="@color/colorBackground"
+                android:contentDescription="@string/cat_picture_description" />
+
+        <TextView
+                android:id="@+id/picture_container_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5sp"
+                android:text=""
+                app:fontFamily="@font/proxima"
+                android:textAlignment="center"
+                android:layout_alignParentBottom="true"
+                android:gravity="center_horizontal"
+                android:textSize="18sp"
+                android:textColor="@color/colorAccent"
+                android:visibility="invisible"
+
+                />
+
+        </RelativeLayout>
 
     <Button
             android:id="@+id/button_take_a_picture"
             android:text="@string/select_a_cat_text"
             android:textColor="@color/colorPrimary"
             android:textSize="18sp"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:fontFamily="@font/proxima"
-            android:gravity="center"
+            android:textAlignment="center"
+            android:layout_gravity="center_horizontal"
+            android:layout_alignParentBottom="true"
             android:background="@drawable/rounded_corners_button_take_a_picture"
-            app:layout_constraintBottom_toBottomOf="@id/picture_container"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginTop="-5sp"
-            android:layout_marginBottom="20sp"
-            android:layout_marginRight="10sp"
-            android:layout_marginLeft="10sp"
-            tools:layout_editor_absoluteY="610dp"
-            tools:layout_editor_absoluteX="0dp"/>
+            android:layout_marginTop="2sp"
+            android:padding = "4sp" />
 
     <Button
             android:id="@+id/button_save_result"
@@ -69,22 +66,14 @@
             android:text="@string/capture_result_text"
             android:textColor="@color/colorPrimary"
             android:textSize="18sp"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
             app:fontFamily="@font/proxima"
-            android:gravity="center"
-
+            android:textAlignment="center"
+            android:layout_alignParentBottom="true"
             android:background="@drawable/rounded_corners_button_take_a_picture"
-            app:layout_constraintBottom_toBottomOf="@id/picture_container"
-            app:layout_constraintTop_toBottomOf="@id/button_take_a_picture"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            android:paddingTop="5sp"
-            android:layout_marginTop="7sp"
-            android:layout_marginBottom="2sp"
-            android:layout_marginRight="10sp"
-            android:layout_marginLeft="10sp"
-            tools:layout_editor_absoluteY="610dp"
-            tools:layout_editor_absoluteX="0dp"/>
+            android:padding = "4sp"
+            android:layout_marginTop="2sp" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
