commit before I switch (back?) to Relative layout for the whole shebang

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="colorAccent">#EDC497</color>
     <color name="colorBackground">#2B2A24</color>
     <color name="colorSecondary">#F6D7FB</color>
-    <color name="colorTransparent">#000000</color>
+    <color name="colorTransparent">#33FFFFFF</color>
+    <color name="colorLightModeText">#FCED94</color>
 </resources>
