--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,77 +3,83 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_gravity="center_horizontal"
-        android:layout_width="match_parent"
+        android:gravity="top"
         android:layout_height="match_parent"
+        android:weightSum = "100"
         android:background="@color/colorBackground"
         android:orientation="vertical"
-
-        tools:context=".MainActivity">
+        tools:context=".MainActivity"
+        android:layout_width="match_parent">
 
     <RelativeLayout
             android:id="@+id/screenshot"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-
-            android:orientation="vertical"
-            >
+            android:layout_height="0dp"
+            android:layout_weight="70"
+            android:gravity="top"
+            android:background="@color/colorBackground">
 
         <ImageView
+                android:id="@+id/picture_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:id="@+id/picture_container"
-                android:background="@color/colorBackground"
+                
+                android:layout_alignParentTop="true"
                 android:contentDescription="@string/cat_picture_description" />
 
         <TextView
                 android:id="@+id/picture_container_text"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="5sp"
                 android:text=""
                 app:fontFamily="@font/proxima"
                 android:textAlignment="center"
                 android:layout_alignParentBottom="true"
                 android:gravity="center_horizontal"
                 android:textSize="18sp"
-                android:textColor="@color/colorAccent"
+                android:textColor="@color/colorLightModeText"
                 android:visibility="invisible"
+                android:background="@color/colorTransparent" />
 
-                />
+    </RelativeLayout>
 
-        </RelativeLayout>
+    <LinearLayout
+            android:id = "@+id/button_container"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginTop="10dp"
+            android:layout_weight="30"
+            android:orientation="vertical">
 
-    <Button
-            android:id="@+id/button_take_a_picture"
-            android:text="@string/select_a_cat_text"
-            android:textColor="@color/colorPrimary"
-            android:textSize="18sp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:fontFamily="@font/proxima"
-            android:textAlignment="center"
-            android:layout_gravity="center_horizontal"
-            android:layout_alignParentBottom="true"
-            android:background="@drawable/rounded_corners_button_take_a_picture"
-            android:layout_marginTop="2sp"
-            android:padding = "4sp" />
+        <Button
+                android:id="@+id/button_take_a_picture"
+                android:text="@string/select_a_cat_text"
+                android:textColor="@color/colorPrimary"
+                android:textSize="18sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:fontFamily="@font/proxima"
+                android:textAlignment="center"
+                android:layout_gravity="center_horizontal"
+                android:background="@drawable/rounded_corners_button_take_a_picture"
+                android:layout_marginTop="2sp"
+                android:padding = "4sp" />
 
-    <Button
-            android:id="@+id/button_save_result"
-            android:visibility="invisible"
-            android:text="@string/capture_result_text"
-            android:textColor="@color/colorPrimary"
-            android:textSize="18sp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            app:fontFamily="@font/proxima"
-            android:textAlignment="center"
-            android:layout_alignParentBottom="true"
-            android:background="@drawable/rounded_corners_button_take_a_picture"
-            android:padding = "4sp"
-            android:layout_marginTop="2sp" />
+        <Button
+                android:id="@+id/button_save_result"
+                android:visibility="invisible"
+                android:text="@string/capture_result_text"
+                android:textColor="@color/colorPrimary"
+                android:textSize="18sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                app:fontFamily="@font/proxima"
+                android:textAlignment="center"
+                android:background="@drawable/rounded_corners_button_take_a_picture"
+                android:padding = "4sp"
+                android:layout_marginTop="2sp" />
+
+    </LinearLayout>
 
 </LinearLayout>
