--- a/app/src/main/res/drawable/rounded_corners_result_text.xml
+++ b/app/src/main/res/drawable/rounded_corners_result_text.xml
@@ -1,11 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-        >
-    <stroke
-            android:width="1dp"
-            android:color="@color/colorSecondary" />
+<shape xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <solid android:color="@color/colorTransparent"  />
+    <solid android:color="@color/colorTransparent" />
 
     <padding
             android:left="1dp"
@@ -14,5 +10,6 @@
             android:top="1dp" />
 
     <corners android:radius="5dp" />
+
 </shape>
 
