--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,31 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:gravity="top"
-        android:layout_height="match_parent"
-        android:weightSum = "100"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:background="@color/colorBackground"
         android:orientation="vertical"
-        tools:context=".MainActivity"
-        android:layout_width="match_parent">
+        tools:context=".MainActivity" >
 
     <RelativeLayout
             android:id="@+id/screenshot"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="70"
-            android:gravity="top"
-            android:background="@color/colorBackground">
+            android:layout_height="wrap_content" >
 
         <ImageView
                 android:id="@+id/picture_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                
                 android:layout_alignParentTop="true"
-                android:contentDescription="@string/cat_picture_description" />
+                android:gravity="top"
+                android:contentDescription="@string/cat_picture_description"
+                android:scaleType="fitStart"
+                />
 
         <TextView
                 android:id="@+id/picture_container_text"
@@ -34,21 +31,22 @@
                 android:text=""
                 app:fontFamily="@font/proxima"
                 android:textAlignment="center"
-                android:layout_alignParentBottom="true"
                 android:gravity="center_horizontal"
+                android:layout_alignBottom="@id/picture_container"
                 android:textSize="18sp"
                 android:textColor="@color/colorLightModeText"
                 android:visibility="invisible"
-                android:background="@color/colorTransparent" />
+                android:background="@drawable/rounded_corners_result_text"
+                android:layout_marginBottom="120dp"
+                />
 
     </RelativeLayout>
 
     <LinearLayout
-            android:id = "@+id/button_container"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginTop="10dp"
-            android:layout_weight="30"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="10dp"
             android:orientation="vertical">
 
         <Button
@@ -78,8 +76,10 @@
                 android:textAlignment="center"
                 android:background="@drawable/rounded_corners_button_take_a_picture"
                 android:padding = "4sp"
-                android:layout_marginTop="2sp" />
+                android:layout_marginTop="2sp"
+                android:layout_marginBottom="5dp"
+                />
 
     </LinearLayout>
 
-</LinearLayout>
+</RelativeLayout>
